# fly-with-friends

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.in
engine/: CMakeLists.txt  addrfinder.cpp  addrfinder.h  aircraft.cpp  aircraft.h  aircraftdb.cpp  aircraftdb.h  clientlink.cpp  clientlink.h  datagrams.cpp  datagrams.h  engine.cpp  engine.h  fwfconsts.h  fwfporting.h  fwfsocket.cpp  fwfsocket.h  icontrol.h  iengine.h  ilogger.h  iprefs.h  isimdata.h  logger.cpp  logger.h  sessionhub.cpp  sessionhub.h  sockcomms.cpp  sockcomms.h
inc/: icontrol.h  iengine.h  ilogger.h  isimulation.h
lib/: CMakeLists.txt
robot/: CMakeLists.txt  flightreplay.cpp  flightreplay.h  robotmain.cpp
server/: CMakeLists.txt  servermain.cpp
src/: CMakeLists.txt  plugin.cpp  testapp.cpp
src/common/: CMakeLists.txt  FWFCommon.vcxproj  addrfinder.cpp  addrfinder.h  aircraft.cpp  aircraft.h  aircraftdb.cpp  aircraftdb.h  clientlink.cpp  clientlink.h  datagrams.cpp  datagrams.h  engine.cpp  engine.h  fwfsocket.cpp  fwfsocket.h  logger.cpp  logger.h  members.cpp  members.h  prefs.cpp  prefs.h  sessionhub.cpp  sessionhub.h  sockcomms.cpp  sockcomms.h
src/include/: fwfconsts.h  fwfporting.h  icontrol.h  iengine.h  ilogger.h  iprefs.h  isimdata.h
src/plugin/: CMakeLists.txt  FWFPlugin.vcxproj  control.h  fwfdialog.cpp  fwfdialog.h  hostdialog.cpp  hostdialog.h  joindialog.cpp  joindialog.h  simaccess.cpp  simaccess.h  simulation.cpp  statusdialog.cpp  statusdialog.h  uimanager.cpp  uimanager.h  xplmain.cpp
src/robot/: CMakeLists.txt  FWFRobot.vcxproj  flightreplay.cpp  flightreplay.h  robotmain.cpp
src/server/: CMakeLists.txt  FWFServer.vcxproj  servermain.cpp
src/testapp/: CMakeLists.txt  control.cpp  control.h  simulation.h  toolmain.cpp
tests/: RunRobot1.bat  RunServer.bat  testdata001.fwf
vside/: FlyWithFriends.sln
